--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <p>WHAT I KNOW</p>
     </div>
     <div class="comp1">
-        <img src="./img/Html.png" alt="">
-        <img src="./img/CSS.png" alt="">
-        <img src="./img/javaScript.png" alt="">
-        <img src="./img/php.png" alt="">
+        <img src="./Html.png" alt="">
+        <img src="./CSS.png" alt="">
+        <img src="./javaScript.png" alt="">
+        <img src="./php.png" alt="">
     </div>
     <div class="contact">
         <p>Contact Me</p>
