--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
     <div class="titre">
         <h1>HELLO,  FRIEND.</h1>
         <br>
-        <p>My work with me 😄.</p>
+        <p>My completed achievements 😄.</p>
     </div>
     <div class="list">
         <ul>
-            <li><a href=""><span>$></span> Sites internet</a></li>
-            <li><a href=""><span>$></span> Projet boutiques</a></li> 
-            <li><a href=""><span>$></span> Projets JavaScript</a></li>  
+            <li><a href="https://github.com/NaSuRal"><span>$></span> Github</a></li>
+            <li><a href="https://nasural.github.io/DevSphere/"><span>$></span> Projet DevSphere</a></li> 
+            <li><a href="https://nasural.github.io/TodoList/"><span>$></span> Projets JavaScript</a></li>  
             <li><a href=""><span>$></span> Projets PHP</a></li>
             <li><a href=""><span>$></span> Projet 1</a></li>
             <li><a href=""><span>$></span> Projet 1zzzzzzzzzzzzz</a></li>
-
-            
         </ul>
     </div>
     <div class="comp">
