--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <ul>
             <li><a href="https://github.com/NaSuRal"><span>$></span> Github</a></li>
             <li><a href="https://nasural.github.io/DevSphere/"><span>$></span> Projet DevSphere</a></li> 
-            <li><a href="https://nasural.github.io/TodoList/"><span>$></span> Projets JavaScript</a></li>  
-            <li><a href=""><span>$></span> Projets PHP</a></li>
-            <li><a href=""><span>$></span> Projet 1</a></li>
-            <li><a href=""><span>$></span> Projet 1zzzzzzzzzzzzz</a></li>
+            <li><a href="https://nasural.github.io/TodoList/"><span>$></span> Projet JavaScript</a></li>  
+            <li><a href=""><span>$></span>....</a></li>
+            <li><a href=""><span>$></span>....</a></li>
+            <li><a href=""><span>$></span>....</a></li>
         </ul>
     </div>
     <div class="comp">
@@ -39,6 +39,7 @@
             <li><p><span>@</span> romain.poulain15@gmail.com</p></li>
             <li><p><span>@</span> 06 40 53 58 27</p></li>
             <li><p><span>@</span> romainpoula6717</p></li>
+            <li><p><span>@</span> https://github.com/NaSuRal</p></li>
         </ul>
     </div>
 </body>
