--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div>
     <div class="contact">
         <p>Contact Me</p>
+        <p>NON</p>
         <br>
         <ul>
             <li><p><span>@</span> Romain Poulain /linkedln</p></li>
