--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </div>
     <div class="list">
         <ul>
-            <li><a href="https://github.com/NaSuRal"><span>$></span> Github</a></li>
-            <li><a href="https://nasural.github.io/DevSphere/"><span>$></span> Projet DevSphere</a></li> 
-            <li><a href="https://nasural.github.io/TodoList/"><span>$></span> Projet JavaScript</a></li>  
+            <li><a href="https://github.com/NaSuRall"><span>$></span> Github</a></li>
+            <li><a href="https://nasurall.github.io/DevSphere/"><span>$></span> Projet DevSphere</a></li> 
+            <li><a href="https://nasurall.github.io/TodoList/"><span>$></span> Projet JavaScript</a></li>  
             <li><a href=""><span>$></span>....</a></li>
             <li><a href=""><span>$></span>....</a></li>
             <li><a href=""><span>$></span>....</a></li>
